--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,12 @@
 
     <name>testng-browserstack</name>
     <url>https://www.github.com/browserstack/testng-browserstack</url>
+    <repositories>
+      <repository>
+        <id>sonatype-nexus-snapshots</id>
+        <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+      </repository>
+    </repositories>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -21,6 +27,12 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>com.browserstack</groupId>
+            <artifactId>automate-testassist</artifactId>
+            <version>1.1.0</version>
+        </dependency>
+
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
@@ -55,6 +67,23 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.18.1</version>
             </plugin>
+            <plugin>
+                <groupId>com.browserstack</groupId>
+                <artifactId>automate-maven-plugin</artifactId>
+                <version>1.0.0-SNAPSHOT</version>
+                <configuration>
+                    <source>${jdk.source.version}</source>
+                    <target>${jdk.target.version}</target>
+                    <complianceLevel>${jdk.source.version}</complianceLevel>
+                </configuration>
+                <executions>
+                  <execution>
+                    <goals>
+                      <goal>test-compile</goal>
+                    </goals>
+                  </execution>
+                </executions>
+              </plugin>
         </plugins>
     </build>
 
@@ -127,5 +156,12 @@
             </build>
         </profile>
     </profiles>
+    <pluginRepositories>
+      <pluginRepository>
+       <id>sonatype-nexus-snapshots</id>
+          <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+      </pluginRepository>
+    </pluginRepositories>
+
 
 </project>
